# senti_trend

./: LICENSE  README.md  build.sh  senti_trend.py  setup.cfg  setup.py  test.py
PKL/: ro_sentiment_review.pkl
examples/: delete_me.py  test.py
src/senti_trend/: senti_trend.py
src/senti_trend_tumikosha.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tumikosha.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_senti_trend.py
