[metadata]
# replace with your username:
name = senti_trend_tumikosha
version = 1.0.0
author = Veaceslav Kunitki
author_email = tumikosha@gmail.com
description = Sentiment and Trend extractor for En, Ro , RU, Es, Vi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tumikosha/senti_trend
project_urls =
    Bug Tracker = https://github.com/tumikosha/senti_trend/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src